fix: table scrollbar ui issue in all pages

--- a/src/scss/filejet-scss/_custom.scss
+++ b/src/scss/filejet-scss/_custom.scss
@@ -384,10 +384,11 @@ body *::-webkit-scrollbar-thumb {
 //for firefox
 
 //for scrollbar
-body * {
-  scrollbar-width: thin;
-  scrollbar-color: var(--bs-purple) var(--bs-purple-light);
-}
+
+// body * {
+//   scrollbar-width: thin;
+//   scrollbar-color: var(--bs-purple) var(--bs-purple-light);
+// }
 
 //for capitalizing first letter of placeholder
 :-moz-placeholder {
